force-app/main/default/objects/AI_Data_Source__c/fields/Connector_Class__c.field-meta.xml
<CustomField>
    <fullName>Connector_Class__c</fullName>
    <description>Use a custom Apex-based class to link and verify credentials with an external data source.</description>
    <inlineHelpText>Use a custom Apex-based class to link and verify credentials with an external data source.</inlineHelpText>
    <label>Connector Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>