force-app/main/default/objects/AI_Data_Source__c/fields/EndPoint_URL__c.field-meta.xml
<CustomField>
    <fullName>EndPoint_URL__c</fullName>
    <label>EndPoint URL</label>
    <type>Url</type>
</CustomField>