force-app/main/default/objects/AI_Data_Source__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DnB</fullName>
            </value>
            <value>
                <fullName>Bloomberg</fullName>
            </value>
            <value>
                <fullName>Kensho</fullName>
            </value>
            <value>
                <fullName>Explorium</fullName>
            </value>
            <value>
                <fullName>GovWin</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>